--- a/Startingwebsite/style.css
+++ b/Startingwebsite/style.css
@@ -34,7 +34,9 @@ a:hover {
 }
 
 .bloc {
+    /*
     width: 100%;
+    */
     clear: both;
     background: 50% 50% no-repeat;
     padding: 0 50px;
