ajout d'une width a media img

--- a/Startingwebsite/style.css
+++ b/Startingwebsite/style.css
@@ -8,6 +8,7 @@ body {
 }
 /*IMG */
 /*logo*/
+
 .logo-la-chouette-agence{
     width: auto;
     height: 100%;
@@ -874,6 +875,9 @@ h4 {
 }
 
 @media (max-width: 991px) {
+    img{
+        width: 100%;
+    }
     .container {
         width: 100%;
     }
