correction des liens dans contact

--- a/Startingwebsite/style.css
+++ b/Startingwebsite/style.css
@@ -349,7 +349,9 @@ a:hover {
     margin-top: 4px;
     font-size: 16px;
 }
-
+.navbar-nav{
+    list-style: none;
+}
 .navbar-nav .open .dropdown-menu > li > a {
     text-align: inherit;
 }
