--- a/Startingwebsite/style.css
+++ b/Startingwebsite/style.css
@@ -407,6 +407,9 @@ a:hover {
         transform: translate(0, -50%);
         -webkit-transform: translateY(-50%);
     }
+    .headerimage{
+        margin: auto;
+    }
     .nav > li .dropdown-menu a,
     .nav > li .dropdown-menu a:hover {
         color: #484848;
@@ -973,7 +976,7 @@ h4 {
     }
     .navbar .nav {
         padding-top: 0;
-        border-top: 1px solid rgba(0, 0, 0, .2);
+       
         float: none!important;
     }
     .navbar.row {
@@ -1099,6 +1102,18 @@ h4 {
     .bloc {
         padding-left: 0;
         padding-right: 0;
+    }
+    .navbar-brand{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .navbar-nav{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+       
+        padding-left: 0px;
     }
 }
 @media (max-width: 767px) {
