--- a/Startingwebsite/style.css
+++ b/Startingwebsite/style.css
@@ -201,6 +201,7 @@ a:hover {
     width: 26px;
 }
 
+
 .d-bloc .btn-wire,
 .d-bloc .btn-wire:hover {
     color: rgba(255, 255, 255, 1);
@@ -398,6 +399,23 @@ a:hover {
 .navbar-toggle {
     margin: 10px 10px 0 0;
     border: 0px;
+    position: relative;
+    float: right;
+    padding: 9px 10px;
+    margin-top: 8px;
+    margin-right: 15px;
+    margin-bottom: 8px;
+    background-color: transparent;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+   
+    
+}
+.navbar-togle span {
+    width: 10px;
+    height: 100px;
+    background-color: red;
 }
 
 .navbar-toggle:hover {
@@ -407,6 +425,9 @@ a:hover {
 .navbar-toggle .icon-bar {
     background-color: rgba(0, 0, 0, .5);
     width: 26px;
+    height: 2px;
+    margin-top: 4px;
+    display: none;
 }
 
 .nav-invert .navbar .nav {
