--- a/Startingwebsite/style.css
+++ b/Startingwebsite/style.css
@@ -547,10 +547,10 @@ nav .caret {
     color: #FFF;
     background: rgba(0, 0, 0, .3);
 }
+/*
 .btn-d{
-    
 }
-
+*/
 button {
     outline: none!important;
 }
