--- a/Startingwebsite/style.css
+++ b/Startingwebsite/style.css
@@ -379,6 +379,7 @@ a:hover {
     float: left;
     margin-top: 4px;
     font-size: 16px;
+    white-space: nowrap;
 }
 .navbar-nav{
     list-style: none;
