--- a/Startingwebsite/style.css
+++ b/Startingwebsite/style.css
@@ -374,7 +374,9 @@ a:hover {
     float: right;
     z-index: 1;
 }
-
+.text-center{
+    color: black;
+}
 .nav > li {
     float: left;
     margin-top: 4px;
