--- a/Startingwebsite/style.css
+++ b/Startingwebsite/style.css
@@ -384,6 +384,9 @@ a:hover {
 .navbar-nav{
     list-style: none;
 }
+.mantra{
+    color: black;
+}
 .navbar-nav .open .dropdown-menu > li > a {
     text-align: inherit;
     text-decoration: none;
